// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 fqZPZB"
    color="info"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 khvwTo"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a hint color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 kDIagB"
    color="hint"
  />
</div>
`;

exports[`Spinner should render a info color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 fqZPZB"
    color="info"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 gsODlB"
    color="info"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 eTNeYF"
    color="info"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 hUoJvu"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="Spinner-sc-1rpx65r-0 dmZoSX"
    color="warning"
  />
</div>
`;
